--- a/style.css
+++ b/style.css
@@ -1,3 +1,22 @@
+:root {
+	--main-color: #333;
+	--sub-color: #222;
+	--active-color: #444;
+	--active-light-color: #888;
+	--text-color: #fff;
+	--sub-text-color: #888;
+	--plane-color: #f00;
+	--excision-color: #ffaf00;
+	--mirror-color: #f5f5f5;
+	--joint-color: #bebebe;
+	--active-tile-color: rgb(255, 167, 104);
+	--button-color: #444;
+	--button-active-color: #fff;
+	--main-font: 'Montserrat', sans-serif;
+	--sub-font: 'Raleway', sans-serif;
+
+}
+
 *,
 *:before,
 *:after {
@@ -30,11 +49,13 @@ body {
 	-ms-text-size-adjust: 100%;
 	-moz-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
-	font-family: 'Roboto', sans-serif;
+	font-family: var(--main-font);
 	padding: 0;
 	margin: 0;
-	background-color: #404040;
+	background-color: var(--active-color);
+	color: var(--text-color);
 	min-height: 100vh;
+	font-feature-settings: 'lnum';
 }
 
 input,
@@ -88,31 +109,22 @@ h6 {
 	display: grid;
 	grid-template-columns: 1fr;
 	grid-template-rows: 25px 1fr;
-	/* width: 100%;
-	height: 100%; */
 	min-height: 100vh;
 }
 
 nav {
 	display: flex;
 	list-style: none;
-	/* padding: 0;
-	margin: 0; */
 	font-size: 14px;
-	background-color: #303030;
-	/* height: 25px; */
+	background-color: var(--main-color);
 	align-items: center;
-	/* position: fixed; */
-	/* width: 100%; */
 	z-index: 10;
 }
 
 .navigation__item {
-	background-color: #303030;
-	color: #fff;
+	background-color: var(--main-color);
 	border-style: none;
 	font-size: 12px;
-	font-weight: 500;
 	padding: 0 10px;
 	height: 100%;
 	display: flex;
@@ -121,21 +133,15 @@ nav {
 }
 
 .navigation__item.active {
-	background-color: #3d3d3d;
+	background-color: var(--active-color);
 }
 
 .navigation__item:hover {
-	background-color: #3d3d3d;
+	background-color: var(--active-color);
 }
 
 .title {
-	/* width: 40px; */
 	font-size: 12px;
-	font-weight: 900;
-	/* display: flex;
-	justify-content: center;
-	align-items: center; */
-	color: #fff;
 	padding: 0 10px;
 }
 
@@ -158,13 +164,18 @@ nav {
 	opacity: 0;
 	visibility: hidden;
 	z-index: 2;
-	background-color: #252525;
+	background-color: rgba(38, 38, 38, 0.7);
+	backdrop-filter: blur(10px);
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
 	justify-content: flex-start;
-	padding: 5px 1px;
-	box-shadow: 0px 5px 10px -1px rgba(0, 0, 0, 0.5)
+	padding: 5px 0px;
+	border-bottom-left-radius: 5px;
+	border-bottom-right-radius: 5px;
+	box-shadow: 0px 5px 10px -1px rgba(0, 0, 0, 0.8);
+	border: 1px solid #555;
+	border-top-style: none;
 }
 
 .dropdown__menu.active {
@@ -173,59 +184,70 @@ nav {
 }
 
 .dropdown__item {
-	background-color: #252525;
-	color: #fff;
+	background-color: transparent;
 	border-style: none;
 	padding: 5px 20px;
 	display: flex;
 	width: 100%;
 	font-size: 12px;
+	color: var(--text-color);
 }
 
 .dropdown__item:hover {
-	background-color: #383838;
+	background-color: var(--active-light-color);
 }
 
 .dropdown__divider {
 	display: block;
 	width: 90%;
-	height: 1px;
-	background-color: #888;
+	height: 0.5px;
+	background-color: var(--active-light-color);
 	margin: 5px auto;
 }
 
-.planes {
+.tabs {
 	display: flex;
 	height: 100%;
 }
 
-.planes__item {
+.tabs__item:first-child {
+	border-left: 1px solid var(--active-light-color);
+}
+
+.tabs__item {
 	font-size: 10px;
 	height: 100%;
 	display: flex;
 	align-items: center;
-	color: rgb(185, 185, 185);
+	color: var(--active-light-color);
 	padding: 0 10px;
-	border-right: 1px solid #888;
+	border-right: 1px solid var(--active-light-color);
 	cursor: pointer;
 }
 
-.planes__item.active {
-	background-color: #3d3d3d;
+.tabs__item::before {
+	padding-right: 5px;
 }
 
-.planes__item:hover {
-	background-color: #3d3d3d;
+.tabs__item.active {
+	background-color: var(--active-color);
+}
+
+.tabs__item:hover {
+	background-color: var(--active-color);
 	color: #fff;
 }
 
-.fa-xmark {
-	padding: 3px 5px 3px 4px;
+.tabs .bi-x,
+.excisions__tabs .bi-x {
+	padding: 1px 3px 1px;
 	margin: 0 0 0 5px;
 	border-radius: 5px;
+	font-size: 14px;
 }
 
-.fa-xmark:hover {
+.tabs .bi-x:hover,
+.excisions__tabs .bi-x:hover {
 	background-color: #f00;
 }
 
@@ -233,102 +255,111 @@ nav {
 	position: relative;
 	width: 100%;
 	height: 100%;
-	display: grid;
-	grid-template-columns: 40px 200px 1fr;
+	/* display: grid; */
+	/* grid-template-columns: 40px minmax(0px, 200px) 1fr; */
+	display: flex;
 	max-width: 100vw;
 }
 
 .sidebar {
+	width: 40px;
 	display: flex;
 	flex-direction: column;
-	/* position: fixed; */
-	/* height: 100%; */
-	/* margin: 25px 0 0 0; */
-	/* left: 0; */
-	/* width: 40px; */
-	background-color: #303030;
+	justify-content: space-between;
+	background-color: var(--main-color);
+	z-index: 2;
+}
+
+.sidebar__group {
+	display: flex;
+	flex-direction: column;
 }
 
 .sidebar i {
-	color: #fff;
 	width: 100%;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	padding: 10px 0;
 	font-size: 16px;
+	cursor: pointer;
 }
 
 .sidebar i.active {
-	background-color: #383838;
+	background-color: var(--active-color);
 }
 
 .sidebar i:hover {
-	background-color: #383838;
+	background-color: var(--active-color);
+}
+
+.workarea {
+	flex: 1 0 auto;
+	overflow: hidden;
+	position: relative;
 }
 
 .canvas {
+	height: calc(100vh - 65px);
 	position: relative;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	/* для тесту */
 	margin: 20px;
 	padding: 50px;
 	background-color: #fff;
-	overflow: hidden;
-}
-
-canvas {
-	max-width: calc(100vw - 240px);
-	max-height: calc(100vh - 25px);
-	padding: 20px;
-	/* position: absolute;
-	max-width: 1500px;
-	height: 650px;
-	margin: 25px 0 0 240px; */
+	box-shadow: 0px 5px 10px -1px rgba(0, 0, 0, 0.5);
 }
 
 .canvas__plane {
 	position: relative;
-	/* border: 1px solid red; */
 	display: flex;
 	align-items: center;
-	z-index: 1;
 }
 
 .canvas__plane::after {
 	position: absolute;
 	content: "";
 	display: block;
-	/* top: -1px;
-	left: -1px;
-	width: calc(100% + 2px);
-	height: calc(100% + 2px); */
-	background-color: transparent;
 	width: 100%;
 	height: 100%;
-	border: 1px solid red;
-	z-index: 1;
+	border: 1px solid var(--plane-color);
+	z-index: 7;
+	pointer-events: none;
 }
 
 .canvas__tiles {
-	z-index: -1;
+	width: 100%;
+	height: 100%;
 }
 
 .canvas__tile {
-	background-color: rgb(186, 186, 186);
 	position: absolute;
+	background-color: var(--joint-color);
+}
+
+.canvas__tile.active {
+	background-color: var(--active-tile-color);
+	z-index: 2;
 }
 
 .canvas__mirror {
-	background-color: rgb(237, 237, 237);
 	position: absolute;
+	width: 100%;
+	height: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	font-size: 8px;
+	font-size: 10px;
+	font-family: var(--sub-font);
 	text-align: center;
+	background-color: var(--mirror-color);
+	color: #333;
+	cursor: pointer;
+}
+
+.canvas__mirror.active {
+	/* border: 2px solid rgb(255, 163, 144); */
 }
 
 .canvas__mirror i {
@@ -337,26 +368,163 @@ canvas {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	font-size: 5px;
+	color: #888;
+}
+
+.canvas__excision {
+	position: absolute;
+	border: 1px solid var(--excision-color);
+	pointer-events: none;
+	z-index: 6;
 }
 
 .canvas__size {
 	font-size: 20px;
 	padding: 3px;
 	position: absolute;
-	color: #212121;
+	color: #333;
 	z-index: 10;
 }
 
-.canvas__size_width {
-	/* top: 410px; */
+.canvas__plane button {
+	position: absolute;
+	width: 20px;
+	height: 20px;
+	border-style: none;
+	z-index: 5;
+	border-radius: 5px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 10px;
+	color: #444;
+	background-color: #eee;
+	border: 1px solid #ccc;
+}
+
+.canvas button:hover {
+	border: 1px solid #888;
 }
 
 .canvas__size_height {
-	/* left: 200px; */
 	transform: rotate(-90deg);
-	/* writing-mode: vertical-lr;
-	transform: scale(-1); */
+}
+
+.report {
+	position: relative;
+	margin: 20px;
+	padding: 50px;
+	background-color: #fff;
+	color: #333;
+	box-shadow: 0px 5px 10px -1px rgba(0, 0, 0, 0.5);
+}
+
+.report__title {
+	font-size: 32px;
+	width: 100%;
+	text-align: center;
+	margin: 0 0 20px;
+}
+
+.report__gridfc {
+	width: 100%;
+	text-align: right;
+}
+
+.report__subtitle {
+	font-size: 20px;
+}
+
+.report__line {
+	border-style: none;
+	display: block;
+	height: 0.5px;
+	width: 100%;
+	background-color: var(--sub-text-color);
+}
+
+.report__line_small {
+	width: 25%;
+	display: inline-block;
+}
+
+.report__table {
+	display: flex;
+	font-size: 12px;
+}
+
+.report__column {
+	display: flex;
+	flex-direction: column;
+	padding: 0 15px;
+	align-items: center;
+}
+
+.report__column:first-child {
+	align-items: flex-start;
+}
+
+.report__data {
+	padding: 5px 0;
+}
+
+
+.report__data:first-child {
+	font-size: 16px;
+}
+
+.report__caption {
+	font-size: 16px;
+	padding: 5px 0;
+}
+
+.report__label {
+	line-height: 16px;
+	margin-left: 15px;
+}
+
+.report button {
+	position: absolute;
+	/* width: 20px;
+	height: 20px; */
+	right: 50px;
+	bottom: 50px;
+	border-style: none;
+	z-index: 5;
+	border-radius: 5px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 14px;
+	color: #444;
+	padding: 5px;
+	background-color: #eee;
+	border: 1px solid #ccc;
+}
+
+.report button:hover {
+	border: 1px solid #888;
+}
+
+.settings {
+	padding: 100px;
+	display: flex;
+	flex-direction: column;
+	overflow-y: auto;
+}
+
+.settings label,
+.settings input {
+	margin: 5px;
+}
+
+.settings input {
+	width: 200px;
+	border-style: none;
+	border-radius: 5px;
+	background-color: var(--sub-color);
+	color: #fff;
+	padding: 5px;
 }
 
 button {
@@ -367,16 +535,25 @@ button:disabled {
 	opacity: 0.5;
 }
 
-/* button:hover {
-	opacity: 0.7;
-} */
 .control {
-	/* width: 200px; */
-	/* position: fixed; */
-	/* height: 100%;
-	margin: 25px 0 0 40px; */
+	display: block;
+	overflow: hidden;
+	/* transition: 0.3s; */
+	width: 200px;
+	/* max-width: 300px;
+	min-width: 200px; */
+	margin-left: -200px;
 	position: relative;
-	background-color: #212121;
+	background-color: var(--sub-color);
+	/* resize: horizontal; */
+}
+
+.control.active {
+	margin-left: 0;
+}
+
+.control button {
+	border-radius: 5px;
 }
 
 .control__item {
@@ -396,13 +573,20 @@ button:disabled {
 	visibility: visible;
 }
 
+.control__group {
+	width: 100%;
+	padding: 5px 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
 .control__caption {
 	font-size: 14px;
-	font-weight: 500;
-	text-transform: uppercase;
-	color: #fff;
+	font-family: var(--sub-font);
+	/* font-weight: 300; */
 	text-align: center;
-	margin: 0 0 10px 0;
+	margin: 0 0 10px;
 }
 
 .control__inputs {
@@ -410,40 +594,98 @@ button:disabled {
 	display: grid;
 	grid-template-columns: repeat(2, 50%);
 	align-items: center;
-}
-
-.control__item input,
-.control__item label {
+	grid-gap: 5px;
 	margin: 0 0 5px;
 }
 
-.control__item input {
-	margin: 0 0 5px;
+.control__item input[type="number"] {
+	border-radius: 5px;
+	border-style: none;
+	padding: 5px;
+	font-size: 10px;
+	font-weight: 700;
 }
 
+input[type="color"] {
+	-webkit-appearance: none;
+	border: none;
+	background: var(--button-color);
+	background: transparent;
+	width: 40px;
+	height: 20px;
+	overflow: hidden;
+	outline: none;
+	cursor: pointer;
+}
+
+/* -webkit */
+input[type="color"]::-webkit-color-swatch-wrapper {
+	padding: 0;
+}
+
+input[type="color"]::-webkit-color-swatch {
+	border: 1px solid var(--button-color);
+	border-radius: 5px;
+	transition: 0.3s;
+}
+
+input[type="color"]::-webkit-color-swatch:hover {
+	border: 1px solid var(--button-active-color);
+}
+
+
+/* firefox */
+input[type=color]::-moz-focus-inner {
+	padding: 0;
+	border-radius: 5px;
+}
+
+input[type=color]::-moz-color-swatch {
+	border: 1px solid var(--button-color);
+	border-radius: 5px;
+	transition: 0.3s;
+}
+
+input[type=color]::-moz-color-swatch:hover {
+	border: 1px solid var(--button-active-color);
+}
+
+.control__label,
 .control__item label {
 	font-size: 12px;
 	padding-left: 5px;
-	color: #888;
+	color: var(--active-light-color);
+	font-family: var(--sub-font);
+}
+
+.control__label {
+	width: 100%;
+	margin: 0 0 5px 0;
+	padding: 0;
+}
+
+.control__label_small {
+	font-size: 8px;
+	color: var(--text-color);
+}
+
+.control__label_center {
+	text-align: center;
 }
 
 .control__item button {
-	background-color: #303030;
+	background-color: transparent;
 	font-size: 12px;
 	color: #fff;
 	border: none;
 	padding: 5px 0;
 	width: 100%;
 	margin: 0 auto 5px;
-	font-weight: 500;
+	border: 1px solid var(--button-color);
 }
 
 .control__item button:hover {
-	background-color: #383838;
-}
-
-.control__item i {
-	padding-right: 5px;
+	border: 1px solid var(--button-active-color);
 }
 
 .control__item :last-child {
@@ -472,141 +714,157 @@ button:disabled {
 	justify-content: space-between;
 	align-items: center;
 	width: 100%;
-	border: 1px solid #888;
-	color: rgb(185, 185, 185);
+	border: 1px solid var(--button-color);
+	border-radius: 5px;
+	color: var(--sub-text-color);
 	margin-bottom: 5px;
 	padding: 5px 10px;
-	font-size: 10px;
 }
 
 .move {
 	display: grid;
-	width: 100%;
-	height: 100px;
 	grid-gap: 5px;
 	grid-template-columns: repeat(3, 1fr);
 	grid-template-rows: repeat(3, 1fr);
-	margin-bottom: 5px;
-
+	justify-content: center;
+	align-items: center;
+	margin: 0 auto;
 }
 
 .move button {
+	width: 40px;
+	height: 40px;
 	margin: 0;
 }
 
-.move i {
-	font-size: 14px;
-	padding-right: 0;
-}
-
-.tile {
-	/* background-color: #888; */
-	width: 100%;
-	display: grid;
-	grid-template-columns: repeat(5, 1fr);
-	grid-template-rows: repeat(5, 1fr);
-	justify-content: center;
-	align-items: center;
-	grid-gap: 0px;
-}
-
-.tile button {
-	width: 100%;
-	margin: 0;
-	padding: 0;
-	height: 27px;
+.selection-type {
 	display: flex;
-	justify-content: center;
-	align-items: center;
-	/* width: 25px;
-	height: 25px;
-	margin: 5px;
-	padding: 0; */
+	margin: 0 auto;
 }
 
-.tile button i {
+.selection-type input {
+	display: none;
+	position: relative;
+	z-index: -1;
+	opacity: 0;
+	margin: 0;
 	padding: 0;
 }
 
-.top-inc {
-	grid-column-start: 3;
-	grid-column-end: 4;
-	grid-row-start: 2;
-	grid-row-end: 3;
+.selection-type label {
+	position: relative;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin: 0;
+	padding: 0;
 }
 
-.top-dec {
-	grid-column-start: 3;
-	grid-column-end: 4;
-	grid-row-start: 1;
-	grid-row-end: 2;
-
-}
-
-.bot-inc {
-	grid-column-start: 3;
-	grid-column-end: 4;
-	grid-row-start: 4;
-	grid-row-end: 5;
-}
-
-.bot-dec {
-	grid-column-start: 3;
-	grid-column-end: 4;
-	grid-row-start: 5;
-	grid-row-end: 6;
-}
-
-.left-inc {
-	grid-column-start: 2;
-	grid-column-end: 3;
-	grid-row-start: 3;
-	grid-row-end: 4;
-}
-
-.left-dec {
-	grid-column-start: 1;
-	grid-column-end: 2;
-	grid-row-start: 3;
-	grid-row-end: 4;
-
-}
-
-.right-inc {
-	grid-column-start: 4;
-	grid-column-end: 5;
-	grid-row-start: 3;
-	grid-row-end: 4;
-}
-
-.right-dec {
-	grid-column-start: 5;
-	grid-column-end: 6;
-	grid-row-start: 3;
-	grid-row-end: 4;
-}
-
-.border {
-	height: 100%;
-	padding: 5px;
-	border: 1px solid #383838;
-	grid-column-start: 2;
-	grid-column-end: 5;
-	grid-row-start: 2;
-	grid-row-end: 5;
-	z-index: -1;
-}
-
-i.rotate-left {
-	transform: rotate(-90deg);
-}
-
-i.rotate-right {
+.selection-type label:first-of-type {
 	transform: rotate(90deg);
 }
 
-i.rotate-180 {
-	transform: rotate(180deg);
+.selection-type label::before {
+	content: '';
+	display: inline-block;
+	top: 0;
+	left: 0;
+	width: 40px;
+	height: 40px;
+	padding: 0;
+	margin: 5px;
+	border-radius: 5px;
+	border: 1px solid var(--button-color);
+	color: var(--button-color);
+}
+
+.selection-type input:checked+label::before {
+	border: 1px solid var(--button-active-color);
+}
+
+.selection-type input:checked+label i {
+	color: var(--button-active-color);
+}
+
+
+.selection-type i {
+	position: absolute;
+	padding: 0;
+	margin: 0;
+	font-size: 18px;
+	z-index: 1;
+}
+
+.alert {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	left: 0;
+	top: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	overflow: hidden;
+	opacity: 0;
+	z-index: -1;
+}
+
+.alert.active {
+	overflow: visible;
+	opacity: 1;
+	z-index: 10;
+}
+
+.alert__body {
+	position: relative;
+	/* display: flex;
+	align-items: center;
+	flex-direction: column; */
+	border-radius: 5px;
+	background-color: var(--main-color);
+	background-color: #fff;
+	min-width: 300px;
+	min-height: 200px;
+	padding: 0 0 25px;
+	box-shadow: 0px 5px 10px -1px rgba(0, 0, 0, 0.8);
+}
+
+.alert__title {
+	width: 100%;
+	height: 25px;
+	background-color: var(--active-color);
+	background-color: #ddd;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+	border-bottom: 1px solid rgb(165, 165, 165);
+}
+
+.alert__message {
+	display: flex;
+	justify-content: center;
+	color: #333;
+	margin: 25px;
+	font-size: 14px;
+	line-height: 22px;
+	font-family: var(--sub-font);
+	/* margin: 0 auto; */
+}
+
+.alert__close {
+	position: absolute;
+	bottom: 25px;
+	right: 25px;
+	border: 1px solid #aaa;
+	border-radius: 5px;
+	background-color: transparent;
+	color: var(--text-color);
+	color: #333;
+	font-size: 12px;
+	padding: 5px 20px;
+}
+
+.alert__close:hover {
+	border: 1px solid #333;
 }
 
 .control__step {
