--- a/style.css
+++ b/style.css
@@ -9,12 +9,12 @@
 	--excision-color: #ffaf00;
 	--mirror-color: #f5f5f5;
 	--joint-color: #bebebe;
-	--active-tile-color: rgb(255, 167, 104);
+	--active-tile-color: #ffa768;
 	--button-color: #444;
 	--button-active-color: #fff;
 	--main-font: 'Montserrat', sans-serif;
 	--sub-font: 'Raleway', sans-serif;
-
+	--tile-font-size: 10px;
 }
 
 *,
@@ -54,7 +54,7 @@ body {
 	margin: 0;
 	background-color: var(--active-color);
 	color: var(--text-color);
-	min-height: 100vh;
+	height: 100vh;
 	font-feature-settings: 'lnum';
 }
 
@@ -109,7 +109,7 @@ h6 {
 	display: grid;
 	grid-template-columns: 1fr;
 	grid-template-rows: 25px 1fr;
-	min-height: 100vh;
+	height: 100vh;
 }
 
 nav {
@@ -156,6 +156,10 @@ nav {
 	position: relative;
 }
 
+.dropdown__toggle {
+	font-weight: 500;
+}
+
 .dropdown__menu {
 	width: 200px;
 	top: 25px;
@@ -190,6 +194,7 @@ nav {
 	display: flex;
 	width: 100%;
 	font-size: 12px;
+	font-weight: 400;
 	color: var(--text-color);
 }
 
@@ -252,13 +257,12 @@ nav {
 }
 
 .workspace {
-	position: relative;
+	/* position: relative; */
 	width: 100%;
 	height: 100%;
-	/* display: grid; */
-	/* grid-template-columns: 40px minmax(0px, 200px) 1fr; */
 	display: flex;
 	max-width: 100vw;
+	max-height: calc(100vh - 25px);
 }
 
 .sidebar {
@@ -268,6 +272,7 @@ nav {
 	justify-content: space-between;
 	background-color: var(--main-color);
 	z-index: 2;
+	max-height: 100vh - 25px;
 }
 
 .sidebar__group {
@@ -295,8 +300,9 @@ nav {
 
 .workarea {
 	flex: 1 0 auto;
-	overflow: hidden;
-	position: relative;
+	max-height: calc(100vh - 25px);
+	/* overflow: hidden; */
+	/* position: relative; */
 }
 
 .canvas {
@@ -312,9 +318,13 @@ nav {
 }
 
 .canvas__plane {
+	margin: auto;
+	/* transform: translate(1px, 1px); */
 	position: relative;
 	display: flex;
 	align-items: center;
+	/* border: 1px solid;
+	box-sizing: border-box; */
 }
 
 .canvas__plane::after {
@@ -350,7 +360,7 @@ nav {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	font-size: 10px;
+	font-size: var(--tile-font-size);
 	font-family: var(--sub-font);
 	text-align: center;
 	background-color: var(--mirror-color);
@@ -507,24 +517,61 @@ nav {
 }
 
 .settings {
-	padding: 100px;
+	position: relative;
+	padding: 50px 100px;
 	display: flex;
 	flex-direction: column;
-	overflow-y: auto;
+	height: calc(100vh - 25px);
+	overflow-y: scroll;
 }
 
-.settings label,
-.settings input {
-	margin: 5px;
+.settings__item {
+	display: flex;
+	flex-direction: column;
+	margin: 15px 0;
 }
 
-.settings input {
-	width: 200px;
+.settings__title {
+	font-size: 12px;
+	font-weight: 500;
+	margin: 5px 0;
+}
+
+.settings__details {
+	font-size: 10px;
+	font-family: var(--sub-font);
+	margin: 5px 0;
+}
+
+.settings__block {
+	display: grid;
+	grid-template-columns: 150px 150px;
+	grid-gap: 5px;
+	align-items: center;
+}
+
+.settings label {
+	padding: 5px 0;
+	font-size: 10px;
+	font-family: var(--sub-font);
+	color: var(--sub-text-color);
+}
+
+.settings input[type="text"],
+.settings input[type="number"] {
+	width: 150px;
 	border-style: none;
 	border-radius: 5px;
 	background-color: var(--sub-color);
 	color: #fff;
-	padding: 5px;
+	padding: 5px 10px;
+	font-weight: 500;
+}
+
+.settings input[type="color"] {
+	height: 26px;
+	margin-left: 0px;
+	padding-left: 0px;
 }
 
 button {
@@ -537,13 +584,13 @@ button:disabled {
 
 .control {
 	display: block;
-	overflow: hidden;
 	/* transition: 0.3s; */
 	width: 200px;
 	/* max-width: 300px;
 	min-width: 200px; */
 	margin-left: -200px;
 	position: relative;
+	max-height: 100vh - 25px;
 	background-color: var(--sub-color);
 	/* resize: horizontal; */
 }
@@ -582,8 +629,9 @@ button:disabled {
 }
 
 .control__caption {
-	font-size: 14px;
-	font-family: var(--sub-font);
+	font-size: 12px;
+	font-weight: 500;
+	/* font-family: var(--sub-font); */
 	/* font-weight: 300; */
 	text-align: center;
 	margin: 0 0 10px;
@@ -675,7 +723,8 @@ input[type=color]::-moz-color-swatch:hover {
 
 .control__item button {
 	background-color: transparent;
-	font-size: 12px;
+	font-size: 10px;
+	font-weight: 500;
 	color: #fff;
 	border: none;
 	padding: 5px 0;
@@ -1045,4 +1094,27 @@ input[type=range].styled-slider.slider-progress:hover::-ms-fill-lower {
 
 input[type=range].styled-slider.slider-progress:active::-ms-fill-lower {
 	background: #FF9191;
+}
+
+/* ===== Scrollbar CSS ===== */
+/* Firefox */
+* {
+	scrollbar-width: thin;
+	scrollbar-color: #555 #444;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+	width: 10px;
+}
+
+*::-webkit-scrollbar-track {
+	background: #444;
+	border: 1px solid #555;
+}
+
+*::-webkit-scrollbar-thumb {
+	background-color: #555;
+	border-radius: 0px;
+	/* border: 1px solid #333; */
 }
