--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ body {
 	color: var(--text-color);
 	height: 100vh;
 	font-feature-settings: 'lnum';
+	-webkit-app-region: drag;
 }
 
 input,
@@ -70,6 +71,7 @@ input::-ms-clear {
 
 button {
 	cursor: pointer;
+	-webkit-app-region: no-drag;
 }
 
 button::-moz-focus-inner {
@@ -110,15 +112,39 @@ h6 {
 	grid-template-columns: 1fr;
 	grid-template-rows: 25px 1fr;
 	height: 100vh;
+	-webkit-touch-callout: none;
+	/* iOS Safari */
+	-webkit-user-select: none;
+	/* Chrome/Safari/Opera */
+	-khtml-user-select: none;
+	/* Konqueror */
+	-moz-user-select: none;
+	/* Firefox */
+	-ms-user-select: none;
+	/* Internet Explorer/Edge */
+	user-select: none;
+	/* Non-prefixed version, currently
+											  not supported by any browser */
 }
 
 nav {
 	display: flex;
+	justify-content: space-between;
 	list-style: none;
 	font-size: 14px;
 	background-color: var(--main-color);
 	align-items: center;
 	z-index: 10;
+}
+
+.logo img {
+	height: 15px;
+}
+
+.navigation__menu {
+	height: 100%;
+	display: flex;
+	align-items: center;
 }
 
 .navigation__item {
@@ -138,6 +164,14 @@ nav {
 
 .navigation__item:hover {
 	background-color: var(--active-color);
+}
+
+.navigation__file {
+	text-align: center;
+	font-size: 8px;
+	color: var(--sub-text-color);
+	padding: 5px 10px;
+	z-index: -1;
 }
 
 .title {
@@ -212,22 +246,34 @@ nav {
 
 .tabs {
 	display: flex;
-	height: 100%;
-}
-
-.tabs__item:first-child {
-	border-left: 1px solid var(--active-light-color);
+	min-height: 0;
+	max-height: 25px;
+	background-color: var(--main-color);
 }
 
 .tabs__item {
 	font-size: 10px;
-	height: 100%;
+	height: 25px;
 	display: flex;
 	align-items: center;
 	color: var(--active-light-color);
 	padding: 0 10px;
 	border-right: 1px solid var(--active-light-color);
 	cursor: pointer;
+}
+
+.tabs__item::after {
+	content: '';
+	display: none;
+	width: 5px;
+	height: 5px;
+	background-color: red;
+	border-radius: 50%;
+	margin-left: 5px;
+}
+
+.tabs__item.unsaved::after {
+	display: block;
 }
 
 .tabs__item::before {
@@ -244,15 +290,26 @@ nav {
 }
 
 .tabs .bi-x,
-.excisions__tabs .bi-x {
+.excisions__tabs .bi-x,
+.planes__tabs .bi-x {
 	padding: 1px 3px 1px;
 	margin: 0 0 0 5px;
 	border-radius: 5px;
 	font-size: 14px;
 }
 
+.tabs .bi-circle-fill {
+	padding: 1px 3px 1px;
+	margin: 0 0 0 5px;
+	border-radius: 5px;
+	font-size: 6px;
+	color: #f00;
+}
+
+.tabs .bi-circle-fill:hover,
 .tabs .bi-x:hover,
-.excisions__tabs .bi-x:hover {
+.excisions__tabs .bi-x:hover,
+.planes__tabs .bi-x:hover {
 	background-color: #f00;
 }
 
@@ -280,33 +337,76 @@ nav {
 	flex-direction: column;
 }
 
-.sidebar i {
+.sidebar button {
 	width: 100%;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	padding: 10px 0;
 	font-size: 16px;
-	cursor: pointer;
+	border-style: none;
+	background-color: transparent;
+	color: var(--main-font);
 }
 
-.sidebar i.active {
+.sidebar button {
+	position: relative;
+
+}
+
+.sidebar button::after {
+	content: attr(data-tooltip);
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	right: 0;
+	height: 100%;
+	transform: translate(100%, 0);
+	font-size: 10px;
+	background-color: #555;
+	white-space: nowrap;
+	padding: 5px 10px;
+	opacity: 0;
+	visibility: hidden;
+	box-shadow: 0px 5px 10px -1px rgba(0, 0, 0, 0.5);
+}
+
+.sidebar button:disabled::after {
+	background-color: #555;
+	color: #ddd;
+	opacity: 1;
+}
+
+.sidebar button:hover::after {
+	opacity: 1;
+	visibility: visible;
+}
+
+.sidebar button.active {
 	background-color: var(--active-color);
 }
 
-.sidebar i:hover {
+.sidebar button:hover {
 	background-color: var(--active-color);
+}
+
+.workpanel {
+	position: relative;
+	flex: 1 0 auto;
+	display: flex;
+	flex-direction: column;
+	max-height: calc(100vh - 25px);
 }
 
 .workarea {
+	position: relative;
 	flex: 1 0 auto;
-	max-height: calc(100vh - 25px);
-	/* overflow: hidden; */
-	/* position: relative; */
+	max-height: calc(100vh - 50px);
 }
 
 .canvas {
-	height: calc(100vh - 65px);
+	height: calc(100vh - 90px);
 	position: relative;
 	display: flex;
 	justify-content: center;
@@ -315,6 +415,7 @@ nav {
 	padding: 50px;
 	background-color: #fff;
 	box-shadow: 0px 5px 10px -1px rgba(0, 0, 0, 0.5);
+	overflow: hidden;
 }
 
 .canvas__plane {
@@ -420,7 +521,7 @@ nav {
 	transform: rotate(-90deg);
 }
 
-.report {
+/* .report {
 	position: relative;
 	margin: 20px;
 	padding: 50px;
@@ -497,24 +598,24 @@ nav {
 	position: absolute;
 	/* width: 20px;
 	height: 20px; */
-	right: 50px;
-	bottom: 50px;
-	border-style: none;
-	z-index: 5;
-	border-radius: 5px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	font-size: 14px;
-	color: #444;
-	padding: 5px;
-	background-color: #eee;
-	border: 1px solid #ccc;
-}
+/* right: 50px;
+bottom: 50px;
+border-style: none;
+z-index: 5;
+border-radius: 5px;
+display: flex;
+align-items: center;
+justify-content: center;
+font-size: 14px;
+color: #444;
+padding: 5px;
+background-color: #eee;
+border: 1px solid #ccc;
+} */
 
-.report button:hover {
+/* .report button:hover {
 	border: 1px solid #888;
-}
+} */
 
 .settings {
 	position: relative;
@@ -646,6 +747,12 @@ button:disabled {
 	margin: 0 0 5px;
 }
 
+.control__inputs input:disabled {
+	opacity: 0.8;
+	background-color: #fff;
+
+}
+
 .control__item input[type="number"] {
 	border-radius: 5px;
 	border-style: none;
@@ -741,9 +848,170 @@ input[type=color]::-moz-color-swatch:hover {
 	margin-bottom: 0;
 }
 
+.control__report {
+	width: 100%;
+}
+
+.files {
+	display: flex;
+	flex-direction: column;
+	font-family: var(--sub-font);
+	/* font-size: 10px; */
+	font-weight: 500;
+}
+
+.files__buttons {
+	display: flex;
+	justify-content: flex-end;
+}
+
+.files__buttons button {
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 20px;
+	height: 20px;
+	margin: 0 2px;
+	border-style: none;
+	font-size: 14px;
+}
+
+.files__buttons button:last-child {
+	margin-right: 0;
+}
+
+.files__buttons button:hover {
+	background-color: var(--active-color);
+	border-style: none;
+}
+
+.files__buttons button::after {
+	content: attr(data-tooltip);
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	right: 0;
+	height: 100%;
+	transform: translate(100%, 100%);
+	font-size: 10px;
+	background-color: #555;
+	white-space: nowrap;
+	padding: 5px 10px;
+	opacity: 0;
+	visibility: hidden;
+	box-shadow: 0px 5px 10px -1px rgba(0, 0, 0, 0.5);
+	z-index: 15;
+}
+
+.files__buttons button:hover::after {
+	opacity: 1;
+	visibility: visible;
+}
+
+.files__folder {
+	margin: 5px 0;
+	font-size: 14px;
+}
+
+.files__folder::before {
+	padding-right: 5px;
+}
+
+.files__items {
+	max-height: calc(100vh - 150px);
+	border-left: 1px solid #444;
+	padding-left: 15px;
+	overflow-y: auto;
+	cursor: pointer;
+}
+
+.files__item {
+	display: block;
+	position: relative;
+	background-color: transparent;
+	color: #ddd;
+	padding: 5px;
+}
+
+.files__item::before {
+	padding-right: 5px;
+}
+
+.files__item input {
+	display: inline-block;
+	padding: 0;
+	margin: 0;
+	background-color: transparent;
+	border-style: none;
+	color: #ddd;
+}
+
+.files__item:hover {
+	background-color: var(--active-color);
+}
+
+.files__item.active {
+	background-color: var(--active-color);
+}
+
+.files__item.active::after {
+	content: '';
+	display: block;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	border: 1px solid #888;
+}
+
+
+.files__item input {
+	padding: 0;
+	margin: 0;
+	font-family: var(--sub-font);
+	font-weight: 500;
+	font-size: 12px;
+}
+
+.files__item_active {
+	cursor: text;
+}
+
 .plane {
 	display: flex;
 	flex-direction: column;
+}
+
+.planes__tabs {
+	display: flex;
+	flex-direction: column;
+}
+
+.planes__tab {
+	position: relative;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+	border: 1px solid var(--button-color);
+	border-radius: 5px;
+	color: var(--text-color);
+	margin-bottom: 5px;
+	padding: 10px;
+	font-size: 10px;
+	font-weight: 500;
+	cursor: pointer;
+}
+
+.planes__tab:hover {
+	border: 1px solid var(--button-active-color);
+}
+
+.planes__tab.active {
+	background-color: var(--active-color);
 }
 
 .excisions {
@@ -765,7 +1033,9 @@ input[type=color]::-moz-color-swatch:hover {
 	width: 100%;
 	border: 1px solid var(--button-color);
 	border-radius: 5px;
-	color: var(--sub-text-color);
+	font-size: 10px;
+	font-weight: 500;
+	color: var(--text-color);
 	margin-bottom: 5px;
 	padding: 5px 10px;
 }
@@ -853,9 +1123,7 @@ input[type=color]::-moz-color-swatch:hover {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	overflow: hidden;
-	opacity: 0;
-	z-index: -1;
+	z-index: 10;
 }
 
 .alert.active {
@@ -865,13 +1133,12 @@ input[type=color]::-moz-color-swatch:hover {
 }
 
 .alert__body {
+	max-width: 400px;
 	position: relative;
-	/* display: flex;
-	align-items: center;
-	flex-direction: column; */
 	border-radius: 5px;
 	background-color: var(--main-color);
-	background-color: #fff;
+	color: #333;
+	background-color: #eee;
 	min-width: 300px;
 	min-height: 200px;
 	padding: 0 0 25px;
@@ -881,8 +1148,7 @@ input[type=color]::-moz-color-swatch:hover {
 .alert__title {
 	width: 100%;
 	height: 25px;
-	background-color: var(--active-color);
-	background-color: #ddd;
+	background-color: #ccc;
 	border-top-left-radius: 5px;
 	border-top-right-radius: 5px;
 	border-bottom: 1px solid rgb(165, 165, 165);
@@ -891,29 +1157,29 @@ input[type=color]::-moz-color-swatch:hover {
 .alert__message {
 	display: flex;
 	justify-content: center;
-	color: #333;
 	margin: 25px;
 	font-size: 14px;
+	font-weight: 500;
 	line-height: 22px;
 	font-family: var(--sub-font);
-	/* margin: 0 auto; */
 }
 
 .alert__close {
 	position: absolute;
 	bottom: 25px;
 	right: 25px;
-	border: 1px solid #aaa;
+	border: 1px solid #888;
 	border-radius: 5px;
 	background-color: transparent;
-	color: var(--text-color);
 	color: #333;
 	font-size: 12px;
+	font-weight: 500;
 	padding: 5px 20px;
 }
 
 .alert__close:hover {
-	border: 1px solid #333;
+	background-color: #ddd;
+	border: 1px solid #aaa;
 }
 
 .control__step {
